--- a/zaj1/src/app/globals.css
+++ b/zaj1/src/app/globals.css
@@ -3,8 +3,9 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
+  --background: #88b8c4;
   --foreground: #171717;
+
 }
 
 @media (prefers-color-scheme: dark) {
